-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.3
-
-
07734ab07 (dev)
When closing webpage window.onbeforeunload events is not fired. Attached little html file it needs to be loaded from a web server.
Then using Qt simple browser load this page and click on the link, a new tab will be created close this tab and then you will see in previous tab "it worked" will print.
This works in chrome but not in QtWebengine. Attached screen recording
| For Gerrit Dashboard: QTBUG-124004 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 552942,4 | Update simplebrowser example to use onbeforeunload | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |