Update simplebrowser example to use onbeforeunload

Previously simplebrowser did not make use of the RequestClose webaction
to trigger the beforeunload JavaScript event. This meant that closing a
tab would not trigger this event or a confirmation dialog, but reloading
a tab would.

This commit hooks up the appropriate signal in the example code.

Fixes: QTBUG-124004
Change-Id: I0a4ce242b6c2f89583504841d817285610be0bd0
Reviewed-by: Michael Brüning <michael.bruning@qt.io>