examples/webenginewidgets/simplebrowser/tabwidget.cpp
@@ -21,7 +21,10 @@ TabWidget::TabWidget(QWebEngineProfile *profile, QWidget *parent)
     tabBar->setMovable(true);
     tabBar->setContextMenuPolicy(Qt::CustomContextMenu);
     connect(tabBar, &QTabBar::customContextMenuRequested, this, &TabWidget::handleContextMenuRequested);
-    connect(tabBar, &QTabBar::tabCloseRequested, this, &TabWidget::closeTab);
+    connect(tabBar, &QTabBar::tabCloseRequested, [this](int index) {
+        if (WebView *view = webView(index))
+            view->page()->triggerAction(QWebEnginePage::WebAction::RequestClose);
+    });
     connect(tabBar, &QTabBar::tabBarDoubleClicked, [this](int index) {
         if (index == -1)
             createTab();
